--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "gsap": "^3.12.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^9.1.0",
+    "react-redux": "^9.1.1",
     "react-scripts": "5.0.1",
     "react-typist": "^2.0.5",
     "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
