--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.1",
     "react-scripts": "5.0.1",
+    "react-spring": "^9.7.3",
     "react-typist": "^2.0.5",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
