--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "antd": "^5.16.0",
     "gsap": "^3.12.5",
     "react": "^18.2.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.1",
     "react-scripts": "5.0.1",
