--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-spring": "^9.7.3",
     "react-typist": "^2.0.5",
     "redux": "^5.0.1",
+    "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^3.1.0",
     "web-vitals": "^2.1.4"
   },
