--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "react-i18next": "^14.1.2",
     "react-redux": "^9.1.1",
     "react-scripts": "5.0.1",
+    "react-simple-typewriter": "^5.0.1",
     "react-spring": "^9.7.3",
-    "react-typist": "^2.0.5",
     "redux": "^5.0.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^3.1.0",
