--- a/package.json
+++ b/package.json
@@ -3,10 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/dom": "^10.1.0",
     "@testing-library/jest-dom": "^6.4.5",
     "@testing-library/react": "^16.0.0",
-    "@testing-library/user-event": "^13.5.0",
     "ajv": "^8.16.0",
     "ajv-keywords": "^5.1.0",
     "antd": "^5.16.0",
@@ -23,7 +21,7 @@
     "redux": "^5.0.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^3.1.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^4.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -48,5 +46,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@testing-library/dom": "^10.1.0",
+    "@testing-library/user-event": "^14.5.2"
   }
 }
